Added a backend, and the cards.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "preact": "^10.19.6"
+    "axios": "^1.6.8",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "mysql": "^2.18.1",
+    "preact": "^10.19.6",
+    "sass": "^1.72.0",
+    "vite-plugin-sass": "^0.1.0"
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.8.2",
